{
    "name": "Drone",
    "maps": [
        {
            "name": "Drone",
            "id": "3a6dbdb1-257d-4787-9c32-4e3d4af43788",
            "actions": [
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "17e25f1a-e99d-4b2a-97a7-3ef09067d7c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "bac3ae00-d1c7-4e3a-9387-64dbd252505f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YawRight",
                    "type": "Button",
                    "id": "40d9b293-59a0-4b18-a4c5-f8492b14d318",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YawLeft",
                    "type": "Button",
                    "id": "4a094991-c672-4c8a-80ed-c76ac0ee3243",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PitchUp",
                    "type": "Button",
                    "id": "5a1c2579-1d7d-40dd-bff5-9e135c3eba35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PitchDown",
                    "type": "Button",
                    "id": "546bd172-c780-42f2-b759-c814c8aea972",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollRight",
                    "type": "Button",
                    "id": "6f3a4878-5891-4bb9-bf73-95579b323bb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RollLeft",
                    "type": "Button",
                    "id": "6d30f125-b4df-4f11-98ba-38b9cbf2e44c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "040bb1af-e2d7-4f6f-9937-7e41af53e1f9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b9a0b64-312e-4baf-b7ad-2dbfa88dacf2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93b7a4df-9b77-4c99-8152-060f05ae53b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8ef7c41-2d0a-44ca-99a3-3ac77446c868",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a069a987-147b-4d3f-9a78-27e1cfd1815a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PitchUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ae3dd6d-2ede-41f1-bd8d-5f1169b1b755",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PitchDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b76b153-11fe-4f55-8c63-63b3d939d372",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fece559-514e-4b70-b7ca-5c493b4f2959",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}